--- a/src/app/admin/itinarires/components/proceed/proceed.component.html
+++ b/src/app/admin/itinarires/components/proceed/proceed.component.html
@@ -57,7 +57,7 @@
               </div>
               <div style="justify-content: center;" class="input-group-append">
                 <!-- <button (click)="update()" class="btn btn-secondary" type="submit">Save</button> -->
-                 <!-- <button (click)="submit()" class="btn btn-primary" type="submit">Proceed</button> -->
+                 <button (click)="submit()" class="btn btn-primary" type="submit">Proceed</button> 
               </div> 
                </form>
                 </div>
