--- a/src/app/admin/accounts/financial/financial.component.html
+++ b/src/app/admin/accounts/financial/financial.component.html
@@ -71,9 +71,13 @@
                               <th mat-header-cell *matHeaderCellDef mat-sort-header>Type</th>
                               <td mat-cell *matCellDef="let row"> {{row.type}} </td>
                             </ng-container> 
+                            <ng-container matColumnDef="amount">
+                              <th mat-header-cell *matHeaderCellDef mat-sort-header>Amount</th>
+                              <td mat-cell *matCellDef="let row"> {{row.type}} </td>
+                            </ng-container> 
                             <ng-container matColumnDef="balance">
                               <th mat-header-cell *matHeaderCellDef mat-sort-header>Balance</th>
-                              <td mat-cell *matCellDef="let row">{{row.balance}}</td>
+                              <td mat-cell *matCellDef="let row">{{row.balance}}{{this.balance}}</td>
                             </ng-container>
 
                             <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
