--- a/src/app/admin/bookings/invoice/invoice.component.html
+++ b/src/app/admin/bookings/invoice/invoice.component.html
@@ -27,7 +27,7 @@
       <div class="row clearfix">
 
           <div class="col-lg-12 col-md-12">
-              <div class="card invoice1">
+              <div class="card invoice1" id="invoice" #invoice>
                 <div class="header">
                   <div class="invoice-top clearfix">
                     <div  class="title">
@@ -126,7 +126,7 @@
                           </div>
                           <div class="hidden-print col-md-12 text-right">
                               <hr>
-                              <button class="btn btn-outline-secondary"><i class="icon-printer"></i></button>
+                              <button (click)="downloadPdf()" class="btn btn-outline-secondary"><i class="icon-printer"></i></button>
                               <button class="btn btn-primary">Submit</button>
                           </div>
                       </div>
