--- a/src/app/admin/reports/productreport/productreport.component.html
+++ b/src/app/admin/reports/productreport/productreport.component.html
@@ -26,7 +26,7 @@
 
               <div class="row clearfix">
                   <div class="col-lg-12">
-                      <div class="card">
+                      <!-- <div class="card">
                           <div class="header">
                               <h2>Product Report<small>Basic example without any additional modification classes</small> </h2>
                           </div>
@@ -92,32 +92,136 @@
                                           <tr>
                                               <td>1</td>
                                               <td>1-Dec-22</td>
-                                              <td>GHRN: 15501</td>
-                                              <td>21-Jan-23</td>
+                                              <td>{{data.id}}</td>
+                                              <td>{{data.tripdate}}</td>
                                               <td>-</td>
                                               <td>-</td>
                                               <td>GOGAGA HOLIDAYS - OWN BUSINESS</td>
                                               <td>-</td>
                                               <td>-</td>
-                                              <td>Rashmi</td>
-                                              <td>Mrs.Vineetha</td>
-                                              <td>7893218529</td>
-                                              <td>Dubai</td>
+                                              <td>{{data.formraiser}}</td>
+                                              <td>{{data.customername}}</td>
+                                              <td>{{data.customernumber}}</td>
+                                              <td>{{data.destination}}</td>
                                               <td>International</td>
-                                              <td>3</td>
+                                              <td>{{data.no}}</td>
                                               <td>0</td>
                                               <td>0</td>
-                                              <td>113480</td>
-                                              <td>214060</td>
-                                              <td>327,540.00</td>
+                                              <td>{{data.afc}}</td>
+                                              <td>{{data.totallcost}}</td>
+                                              <td>{{data.totalp}}</td>
                                           </tr>
                                   </tbody>
-                              </table>
-
-                </div>
+                              </table> 
+                               
+                            </div>
                           </div>
-                      </div>
-                  </div>
+                      </div> -->
+                       <div class="row clearfix">
+                        <div class="col-md-12">
+                            <div class="table-responsive">
+                                <div class="input-group mb-3"> 
+                                    <input matInput type="text" class="form-control" aria-label="Small" aria-describedby="inputGroup-sizing-sm" (keyup)="applyFilter($event)" placeholder="Search" #input>
+                                  </div>
+                                  <div class="mat-elevation-z8">
+                                      <table class="table table-bordered table-hover js-basic-example dataTable table-custom" mat-table [dataSource]="dataSources" matSort>
+                  
+                                        <tr matColumnDef="id">
+                                          <th mat-header-cell *matHeaderCellDef mat-sort-header>ID/Ref No/RaiseDate</th>
+                                          <td mat-cell *matCellDef="let row"> GHRN{{row.id}}</td>
+                                        </tr>
+                                        <tr matColumnDef="createdAt">
+                                          <th mat-header-cell *matHeaderCellDef mat-sort-header>ID/Ref No/RaiseDate</th>
+                                          <td mat-cell *matCellDef="let row">{{row.createdAt}}</td>
+                                        </tr>
+                                        <tr matColumnDef="partner">
+                                          <th mat-header-cell *matHeaderCellDef mat-sort-header>ID/Ref No/RaiseDate</th>
+                                          <td mat-cell *matCellDef="let row">{{row.partner}}</td>
+                                        </tr>
+                                        <!-- ID Column -->
+                                        <tr matColumnDef="customername">
+                                          <th mat-header-cell *matHeaderCellDef mat-sort-header>Contacted By/Form Raiser/Source</th>
+                                          <td mat-cell *matCellDef="let row">{{row.customername}}</td>
+                                        </tr>
+                                        <!-- Name Column -->
+                                        <tr matColumnDef="customernumber">
+                                          <th mat-header-cell *matHeaderCellDef mat-sort-header> Customer Name  </th>
+                                          <td mat-cell *matCellDef="let row">{{row.customernumber}} </td>
+                                        </tr>
+                                    
+                                         
+                                        <!-- role Column -->
+                                        <tr matColumnDef="destination">
+                                          <th mat-header-cell *matHeaderCellDef mat-sort-header>Destination </th>
+                                           <td mat-cell *matCellDef="let row"> {{row.destination}}</td>
+                                        </tr> 
+                                        <tr matColumnDef="passenger">
+                                          <th mat-header-cell *matHeaderCellDef mat-sort-header>Destination </th>
+                                           <td mat-cell *matCellDef="let row"> {{row.passenger}}</td>
+                                        </tr>
+                                        
+                                    
+                                        <tr mat-header-row *matHeaderRowDef="displayedColumn"></tr>
+                                        <tr mat-row *matRowDef="let row; columns: displayedColumn;"></tr>
+                                    
+                                        <!-- Row shown when there is no matching data. -->
+                                        <tr class="mat-row" *matNoDataRow>
+                                          <td class="mat-cell" colspan="4">No data matching the filter "{{input.value}}"</td>
+                                        </tr>
+                                      </table>
+                                    
+                                      <mat-paginator [pageSizeOptions]="[5, 10, 25, 100]" aria-label="Select page of users"></mat-paginator>
+                                    </div>
+                                    <div class="mat-elevation-z8">
+                                        <table class="table table-bordered table-hover js-basic-example dataTable table-custom" mat-table [dataSource]="dataSource" matSort>
+                    
+                                           
+                                          <tr matColumnDef="executive">
+                                            <th mat-header-cell *matHeaderCellDef mat-sort-header>ID/Ref No/RaiseDate</th>
+                                            <td mat-cell *matCellDef="let row">{{row.executive}}</td>
+                                          </tr>
+                                          <!-- ID Column -->
+                                          <tr matColumnDef="totalfcost">
+                                            <th mat-header-cell *matHeaderCellDef mat-sort-header>Contacted By/Form Raiser/Source</th>
+                                            <td mat-cell *matCellDef="let row">{{row.totalfcost}}</td>
+                                          </tr>
+                                          <!-- Name Column -->
+                                          <tr matColumnDef="totallcost">
+                                            <th mat-header-cell *matHeaderCellDef mat-sort-header> Customer Name  </th>
+                                            <td mat-cell *matCellDef="let row">{{row.totallcost}} </td>
+                                          </tr>
+                                      
+                                           
+                                          <!-- role Column -->
+                                          <tr matColumnDef="totalp">
+                                            <th mat-header-cell *matHeaderCellDef mat-sort-header>Destination </th>
+                                             <td mat-cell *matCellDef="let row"> {{row.totalp}}</td>
+                                          </tr>  
+                                          <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+                                          <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+                                      
+                                          <!-- Row shown when there is no matching data. -->
+                                          <tr class="mat-row" *matNoDataRow>
+                                            <td class="mat-cell" colspan="4">No data matching the filter "{{input.value}}"</td>
+                                          </tr>
+                                        </table>
+                                      
+                                        <mat-paginator [pageSizeOptions]="[5, 10, 25, 100]" aria-label="Select page of users"></mat-paginator>
+                                      </div>
+                            </div>
+                           </div>
+                          <div class="col-md-6">
+                             <div class="table-responsive">
+                                <div class="input-group mb-3"> 
+                                    <input matInput type="text" class="form-control" aria-label="Small" aria-describedby="inputGroup-sizing-sm" (keyup)="applyFilter($event)" placeholder="Search" #input>
+                                  </div>
+                                   
+                                 </div>
+                             </div>
+                       </div>
+                      
+                       
+                    </div>
               </div>
 
           </div>
